<resources>
    <string name="app_name">HomeSecurity</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="motionDetection">Motion Detection</string>
    <string name="flashLight">Flash Light</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgotPassword"><u>Forgot password?</u></string>
    <string name="facebook_app_id">943296682432023</string>
    <string name="device_activity_string">Please choose whether this device is being used as a security device or a personal device. Security devices will be used to monitor your home, while personal devices are devices you use on a regular basis</string>
    <string name="security">Security</string>
    <string name="personal">Personal</string>
    <string name="roomname">Room Name</string>
    <string name="dontshowmeagain">Don\'t show me again</string>
    <string name="lighton">Light On</string>
    <string name="lightoff">Light Off</string>
    <string name="mdon">Motion Detection On</string>
    <string name="mdoff">Motion Detection Off</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="security_details_part1">Setting up your device as a security camera is done in 2 easy steps</string>
    <string name="step1">Step 1</string>
    <string name="security_details_part2">To begin setting your device up as a security camera please select the security button shown above circled in red</string>
    <string name="step2">Step 2</string>
    <string name="security_details_part3">Next, we have to supply the name of the room this security camera is going to monitor. The above example shows a security camera being set up for a kitchen. To proceed with the name you\'ve chosen select the save button</string>
    <string name="final_step">That\'s it, your device is now registered as a security device. You will now have a view of your camera so you can place it in an ideal spot.</string>

    <string name="personal_details_part1">A personal device is the device you will use to control your security cameras. Enabling your device as a personal device is very simple as you will see below.</string>
    <string name="personal_details_part2">To allow your device control your security cameras simply select the Personal button circled in red above</string>
    <string name="personal_details_part3">Once you\'ve chosen the personal option your device will begin looking for security cameras you have set up. The below image shows what you can expect once you\'ve chosen the personal option.</string>
    <string name="personal_details_part4">If any security devices are found then they will be presented to you in a list. If none are found then you will be given the option to search again</string>

    <string name="start">Start/Stop Streaming</string>
    <string name="flash">Flash</string>
    <string name="camera">Camera</string>
    <string name="video">Video Settings</string>
    <string name="username">Username</string>

    <string name="uri">URI</string>
    <string name="password_hint">Leave empty if not needed</string>
    <string name="username_hint">Leave empty if not needed</string>
    <string name="default_bitrate">0 kbps</string>
    <string name="default_stream">rtsp://40.127.139.63:1935/live/myStream</string>
    <string name="username_text">robbie</string>
    <string name="password_text"></string>
    <string name="title_activity_login">Sign in</string>

    <!--YET TO CONVERT TO FR AND ES-->
    <string name="sign_out_message">Are you sure you want to sign out</string>
    <string name="leavePersonalDevice">Are you sure you want to exit personal device mode</string>
    <string name="leaveSecurityDevice">Are you sure you want to exit security device mode</string>
    <string name="error_text">Unable to access camera at this time</string>
    <string name="takeVideoText">Take Video</string>
    <string name="takingVideoText">Taking Video</string>
    <string name="roomDetails">Room Details</string>
    <string name="verify">Verify your email account</string>
    <string name="validateEmail">Validate Email</string>
    <string name="addedDevice">This device has been added to your group of devices</string>
    <string name="didnt_add_device">Unable to add this device to your group of devices. Log out and try again</string>
    <string name="emailVerificationMessage">To verify your account please check your inbox or junk folder for an email from HomeSecurity. Sign out and sign back in once you have verified your account</string>
    <string name="failedToFindDevices">Failed to find any security devices</string>
    <string name="retry">RETRY</string>
    <string name="searchVideos">Searching for your videos</string>
    <string name="noVideos">No videos found</string>
    <string name="lights">Lights</string>
    <string name="motion">Motion Detection</string>
    <string name="cameraMessage">The camera is needed in order for this device to detect motion. Would you like to give permission to HomeSecurity to use this devices camera?</string>
    <string name="batteryLife" formatted="false">%1$d%% battery</string>

    <!--may not be used-->
    <string name="security_devices">Security Devices</string>
    <string name="video_files">Your Videos</string>
    <string name="action_settings">Settings</string>


</resources>
