<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/lights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/lights"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginTop="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray">

    </View>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/motion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp">

    </View>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/takeVideoText"
            android:id="@+id/takeVideo_textView"
            android:layout_marginTop="5dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:clickable="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_camcorder"
            android:id="@+id/takeVideo" />


    </LinearLayout>
</LinearLayout>