<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/login_relLayout">

    <android.support.design.widget.TextInputLayout
    android:id="@+id/emailTextInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        >

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:drawableLeft="@drawable/ic_person"
    android:id="@+id/email"
    android:hint="@string/email"
     />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextInput"
        android:layout_alignLeft="@+id/emailTextInput"
        android:layout_alignStart="@+id/emailTextInput"
        android:layout_alignRight="@+id/emailTextInput"
        android:layout_alignEnd="@+id/emailTextInput"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawableRight="@drawable/ic_visibility"
            android:layout_centerHorizontal="true"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            />
    </android.support.design.widget.TextInputLayout>



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/passwordTextInput"
       android:layout_marginTop="20dp"
       android:layout_alignRight="@+id/passwordTextInput"
       android:layout_alignEnd="@+id/passwordTextInput"
       android:weightSum="1"
       android:id="@+id/linLayout"
       android:layout_alignLeft="@+id/passwordTextInput"
       android:layout_alignStart="@+id/passwordTextInput">

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/signIn"
           android:id="@+id/signIn"
           android:layout_weight="0.5"
           android:layout_marginRight="5dp"
           android:layout_below="@+id/passwordTextInput"
           android:background="@drawable/transaprent_button"
           android:textColor="#ffffff" />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Sign up"
           android:layout_weight="0.5"
           android:layout_marginLeft="5dp"
           android:background="@drawable/transaprent_button"
           android:textColor="#ffffff"
           android:id="@+id/signUp"

            />

   </LinearLayout>



    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linLayout"
        android:layout_alignLeft="@+id/linLayout"
        android:layout_alignStart="@+id/linLayout"
        android:layout_alignRight="@+id/linLayout"
        android:layout_alignEnd="@+id/linLayout" />

</RelativeLayout>